rev 477 (2018-10-07) (krueschan)
- add LICENSE to project, fix license where conflict existed

rev 476 (2017-11-02) (krueschan)
- added URL parameter 'dl_wide' to tsv download (download_tabsep.php). If dl_wide=1, the download omits the info and settings table at the top but
  adds settings, calc_version and db_version to each data entry (the idea is to enable more straightforward parsing into statistics software)

rev 475 (2017-07-18) (krueschan)
- added logging of calculator settings to ../sessions/param_log.txt file on each call of the calculator engine

rev 474 (2017-03-02) (krueschan)
- temporarily reverted to jQuery UI version 1.9.2 because it's the most recent version with which the UI pop up for displaying helptext works

rev 473 (2016-06-14) (krueschan)
- small changes to "not-logged-in" info screen when public users stumble upon the developer version of the calculator
- API calls now through https
- changed links to urls within CERP webspace to https

rev 472 (2016-04-18) (krueschan)
- temporarily disabled settings for LULUCF inclusion in country report for public version (it's still present in the -dev version)

rev 471 (2016-04-14) (krueschan)
- further revisions to splash page (R-C weight is now a slider)
- hotlinked to "cloud-hosted" versions of jquery code (on code.jquery.com) instead of locally hosted files

rev 470 (2016-04-11) (krueschan)
- changed elements on the Equity Splash page around (now responsibiliy and capability on the 3x3 equity dial pad)
- now using a svg version of the logo instead of png for cleaner rendering

rev 469 (2015-10-16) (krueschan)
- added new logo to header branding and amended css to play nice with it

rev 468 (2015-10-10) (krueschan)
- fixed small bug in pledge description that got introduced in the partial commit in rev 466

rev 467 (2015-10-08) (krueschan)
- advanced Excel download: suppress output for regions and world if countries are specified; otherwise nonsensical output