@@ -1,2 +1,3 @@
 /nbproject/private/
 /public_html/config.php
+!/public_html/config.php.new
