@@ -1,0 +1,62 @@
+<?php
+ 
+// core database locations
+$core_db = "/PATH/TO/YOUR/gdrs_core_pub.sql3";
+$core_db_dev = "/PATH/TO/YOUR/gdrs_core.sql3"; // if your installation has a separate "developer" modde
+
+// set various paths
+// note, when changing the various temporary storage paths, ensure make sure to also change the cron job that deletes old junk there
+$user_db_store = "/PATH/TO/YOUR/temp-user-dbs";  // temporary copies of user databases
+$svg_tmp_dir   = "/PATH/TO/YOUR/temp-svgs"; // svg files of country graphs are generated here
+$xls_tmp_dir = $user_db_store; // where temporary files are saved when xls download is generated
+
+$xls_file_slug = "cerc_all_output_"; // this is the beginning of the file name of the Excel download
+$xls_copyright_notice = "Climate Equity Reference Project Online Calculator (http://calculator.climateequityreference.org)"; // this is the message for cell A1 in the downloaded Excel file
+
+// calculator engine -- this is the path to the executable of the "calculator c-engine"
+$calc_engine_path = "//PATH/TO/YOUR/gdrscode/engine/gdrsclib/dist/Public/GNU-Linux-x86/gdrsclib";
+$calc_engine_path_dev = "//PATH/TO/YOUR/gdrscode/engine/gdrsclib/dist/Development/GNU-Linux-x86/gdrsclib";
+
+// pledge db connection information
+$pledge_db_config = array( 
+            "dbname" => "dbname",
+            "user" => "user",
+            "pwd" => "pwd",
+            "host" => "host"
+            );
+
+// define certain URLs; use your own domain names, Include trailing slash
+$URL_calc = 'https://calculator.climateequityreference.org/';
+$URL_calc_dev = 'https://calculator-dev.climateequityreference.org/';
+$URL_gloss = 'https://calculator.climateequityreference.org/glossary.php';
+$URL_gloss_dev = 'https://calculator-dev.climateequityreference.org/glossary.php';
+$URL_calc_api = 'https://calculator.climateequityreference.org/api/';
+$URL_calc_api_dev = 'https://calculator-dev.climateequityreference.org/api/';
+
+// this is the directory where the include files of the help db project
+// specifically, db_gdrs_help.inc.php and error.html.php
+$helpdb_include_path = $_SERVER['DOCUMENT_ROOT'] . '/helpdb/includes/';
+
+// Excel download table header replacements
+// this array provides for a rename mask for the 
+// table headers for the Excel data file download. 
+// syntax: "old_value" => "new_value"
+$excel_download_header_rename = array(  
+            "gdrs_alloc_MtCO2"       => "allocation_MtCO2",
+            "gdrs_r_MtCO2"           => "responsibility_MtCO2",
+            "gdrs_c_blnUSDMER"       => "capacity_blnUSDMER",
+            "gdrs_rci"               => "rci",
+            "gdrs_pop_mln_above_dl"  => "pop_mln_above_dl",
+            "gdrs_pop_mln_above_lux" => "pop_mln_above_lux",
+            "gdrs_c_frac"            => "c_frac",
+            "gdrs_r_frac"            => "r_frac"
+            );
+
+// the _dev calculator might be .htaccess protected. If so, we need to pass creds
+$dev_calc_creds = array ("user"=>"user", "pass"=>"pass");
+
+// where the main website lives - we don't want to use $host_name for this as it might include subdomain names
+$main_domain_host = "climateequityreference.org";
+        
+// Google Analytics - the tracking code is specific for the calculator; 
+$ga_tracking_code = 'UA-XXXXXXXX-X';
