@@ -1,3 +1,6 @@
+rev 478 (2018-10-07) (krueschan)
+- generic config.php.new file
+
 rev 477 (2018-10-07) (krueschan)
 - add LICENSE to project, fix license where conflict existed
 
